--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 <footer class="page-footer">
 	<div class="page-footer-content fixed-width clearfix">
 		<small class="copyright">All Content Copyright 2022 - Blitx. All Rights Reserved</small>
-		<small class="credits">Site Designed by <a href="#">Best PSD Freebies</a></small>
+		<small class="credits">Site Designed by <a href="#">Favour Smiles Adejoh</a></small>
 	</div>
 </footer>
 </body>
