--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Economica&family=Pacifico&display=swap" rel="stylesheet">
+	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" type="text/css" href="all.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
