--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<h2>My Latest Work</h2>
 	</div>
 
-	<div class="clearfix flex section" >
+	<div class="clearfix flex " >
 		<article class="work">
 			<figure>
 				<img src="https://loremflickr.com/220/120/nature/all?t=1">
