--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </figure>
 
 <!-- claims -->
-<section class="claims clearfix data-block mid-section flex section">
+<section class="claims clearfix data-block mid-section flex ">
 		<article class="claim">
 			<header class="clearfix flex">
 				<i class="fa-solid fa-magnifying-glass"></i>
