--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </figure>
 
 <!-- claims -->
-<section class="claims clearfix data-block mid-section flex ">
+<section class="claims clearfix data-block mid-section flex section">
 		<article class="claim">
 			<header class="clearfix flex">
 				<i class="fa-solid fa-magnifying-glass"></i>
@@ -145,7 +145,7 @@
 
 <!-----Footer------>
 <footer class="page-footer">
-	<div class="page-footer-content fixed-width clearfix">
+	<div class="page-footer-content fixed-width clearfix flex">
 		<small class="copyright">All Content Copyright 2022 - Blitx. All Rights Reserved</small>
 		<small class="credits">Site Designed by <a href="#">Favour Smiles Adejoh</a></small>
 	</div>
