--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <header class="page-header">
 			<div class="fixed-width container">
 				<em class="identity">Blitz</em>
+				<div class="menu-toggle">
+					<div class="hamburger"></div>
+				</div>
+				<script src="script.js"></script>
 				<nav class="menu">
 					<ul>
 						<li><a href="#">Homepage<em>Home</em></a></li>
